this is from github

--- a/index2.html
+++ b/index2.html
@@ -114,7 +114,7 @@
   <div class="container">
 
     <div class="card">
-      <h2>What is DevOps?</h2>
+      <h2>What is DevOps? Devops is da Best</h2>
       <p>
         DevOps is a combination of <b>Development</b> and <b>Operations</b>. It is a culture and set of practices
         that helps teams build, test, and release software faster and more reliably. DevOps focuses on automation,
